--- a/frontend/natiart-app/src/app/product/components/customer/cart-modal/cart-modal.component.html
+++ b/frontend/natiart-app/src/app/product/components/customer/cart-modal/cart-modal.component.html
@@ -2,54 +2,59 @@
   class="absolute top-full right-0 mt-2 bg-primary-lighter border-2 border-primary-light p-4 rounded-lg shadow-lg shadow-primary-dark w-80 z-50">
   <h2 class="text-xl font-bold mb-4">Your Cart</h2>
 
-  <ng-container *ngIf="(cartItems$ | async) as cartItems">
-    <div *ngIf="cartItems.length; else emptyCart">
-      <div *ngFor="let item of cartItems" class="flex items-center mb-4 pb-4 border-b">
-        <div class="w-16 h-16 mr-4 overflow-hidden rounded">
-          <img (error)="onImageError(item.product.id!)"
-               *ngIf="imageUrls[item.product.id!]"
-               [alt]="item.product.label"
-               [src]="imageUrls[item.product.id!]"
-               class="w-full h-full object-cover">
-          <div *ngIf="!imageUrls[item.product.id!]" class="w-full h-full bg-gray-200 flex items-center justify-center">
-            <span class="text-gray-400">No image</span>
-          </div>
-        </div>
-        <div class="flex-grow">
-          <p class="font-semibold">{{ item.product.label }}</p>
-          <p *ngIf="item.goldBorder" class="mt-1 text-sm font-medium text-yellow-600">With Gold Border</p>
-          <div class="flex items-center mt-1">
-            <input (change)="updateQuantity(item, item.quantity)" [(ngModel)]="item.quantity"
-                   [max]="item.product.stockQuantity"
-                   [min]="1" class="w-16 p-1 border rounded mr-2" type="number">
-            <p>{{ item.product.markedPrice * item.quantity | currency:'BRL' }}</p>
-          </div>
-        </div>
-        <app-button (click)="removeItem(item, $event)" color="link" size="sm">
-          <svg class="h-5 w-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-            <path clip-rule="evenodd"
+  @if ((cartItems$ | async); as cartItems) {
+    @if (cartItems.length) {
+      <div>
+        @for (item of cartItems; track item) {
+          <div class="flex items-center mb-4 pb-4 border-b">
+            <div class="w-16 h-16 mr-4 overflow-hidden rounded">
+              @if (imageUrls[item.product.id!]) {
+                <img (error)="onImageError(item.product.id!)"
+                  [alt]="item.product.label"
+                  [src]="imageUrls[item.product.id!]"
+                  class="w-full h-full object-cover">
+              }
+              @if (!imageUrls[item.product.id!]) {
+                <div class="w-full h-full bg-gray-200 flex items-center justify-center">
+                  <span class="text-gray-400">No image</span>
+                </div>
+              }
+            </div>
+            <div class="flex-grow">
+              <p class="font-semibold">{{ item.product.label }}</p>
+              @if (item.goldBorder) {
+                <p class="mt-1 text-sm font-medium text-yellow-600">With Gold Border</p>
+              }
+              <div class="flex items-center mt-1">
+                <input (change)="updateQuantity(item, item.quantity)" [(ngModel)]="item.quantity"
+                  [max]="item.product.stockQuantity"
+                  [min]="1" class="w-16 p-1 border rounded mr-2" type="number">
+                <p>{{ item.product.markedPrice * item.quantity | currency:'BRL' }}</p>
+              </div>
+            </div>
+            <app-button (click)="removeItem(item, $event)" color="link" size="sm">
+              <svg class="h-5 w-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                <path clip-rule="evenodd"
                   d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
                   fill-rule="evenodd"/>
-          </svg>
-        </app-button>
-      </div>
-
-      <div class="border-t pt-2 mt-2">
-        <div class="flex justify-between items-center font-bold">
-          <span>Total:</span>
-          <span>{{ cartTotal$ | async | currency:'BRL' }}</span>
+              </svg>
+            </app-button>
+          </div>
+        }
+        <div class="border-t pt-2 mt-2">
+          <div class="flex justify-between items-center font-bold">
+            <span>Total:</span>
+            <span>{{ cartTotal$ | async | currency:'BRL' }}</span>
+          </div>
+        </div>
+        <div class="mt-4">
+          <app-button routerLink="/cart" [block]="true" color="primary" size="lg">
+            Go to Cart
+          </app-button>
         </div>
       </div>
-
-      <div class="mt-4">
-        <app-button routerLink="/cart" [block]="true" color="primary" size="lg">
-          Go to Cart
-        </app-button>
-      </div>
-    </div>
-
-    <ng-template #emptyCart>
+    } @else {
       <p class="text-center text-gray-500">Your cart is empty.</p>
-    </ng-template>
-  </ng-container>
+    }
+  }
 </div>
