--- a/frontend/natiart-app/src/app/directory/components/auth/login/login.component.html
+++ b/frontend/natiart-app/src/app/directory/components/auth/login/login.component.html
@@ -17,49 +17,51 @@
 
         <app-natiart-form-field label="Password" controlName="password" [isPassword]="true" [form]="loginForm" (showPasswordEmitter)="togglePasswordVisibility()">
           <input [type]="showPassword ? 'text' : 'password'"
-                 formControlName="password" autocomplete="new-password" placeholder="••••••••" class="w-full px-4 py-3 bg-surface rounded-lg border border-surface-variant focus:border-primary focus:ring-2 focus:ring-primary/30 placeholder:text-surface-contrast/50 transition-all">
-        </app-natiart-form-field>
+            formControlName="password" autocomplete="new-password" placeholder="••••••••" class="w-full px-4 py-3 bg-surface rounded-lg border border-surface-variant focus:border-primary focus:ring-2 focus:ring-primary/30 placeholder:text-surface-contrast/50 transition-all">
+          </app-natiart-form-field>
 
-        <app-button type="submit" [disabled]="loginForm.invalid" [block]="true" color="primary" size="lg">
-          Sign in
-        </app-button>
-      </div>
-    </form>
-
-
-
-    <div *ngIf="errorMessage" class="mt-3 text-center text-xs sm:text-sm text-red-600" role="alert">
-      {{ errorMessage }}
-    </div>
-
-    <div class="mt-6 sm:mt-8">
-      <div class="relative">
-        <div class="absolute inset-0 flex items-center">
-          <div class="w-full border-t border-primary"></div>
+          <app-button type="submit" [disabled]="loginForm.invalid" [block]="true" color="primary" size="lg">
+            Sign in
+          </app-button>
         </div>
-        <div class="relative flex justify-center text-xs sm:text-sm">
-          <span class="px-2 bg-background text-secondary-light">
-            Or continue with
-          </span>
-        </div>
-      </div>
+      </form>
 
-      <div class="mt-6">
-        <app-button color="secondary" [block]="true" size="lg">
-          <img alt="Google logo" class="h-5 w-5 mr-2"
-               src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg">
-          Sign in with Google
-        </app-button>
+
+
+      @if (errorMessage) {
+        <div class="mt-3 text-center text-xs sm:text-sm text-red-600" role="alert">
+          {{ errorMessage }}
+        </div>
+      }
+
+      <div class="mt-6 sm:mt-8">
+        <div class="relative">
+          <div class="absolute inset-0 flex items-center">
+            <div class="w-full border-t border-primary"></div>
+          </div>
+          <div class="relative flex justify-center text-xs sm:text-sm">
+            <span class="px-2 bg-background text-secondary-light">
+              Or continue with
+            </span>
+          </div>
+        </div>
+
+        <div class="mt-6">
+          <app-button color="secondary" [block]="true" size="lg">
+            <img alt="Google logo" class="h-5 w-5 mr-2"
+              src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg">
+              Sign in with Google
+            </app-button>
+          </div>
+        </div>
+
+        <p class="mt-4 sm:mt-6 text-center text-xs sm:text-sm text-secondary-light">
+          Not a member?
+          <a
+            class="font-medium text-primary hover:text-primary-dark transition-colors duration-300 focus:outline-none focus:underline"
+            href="/register">
+            Sign up now
+          </a>
+        </p>
       </div>
     </div>
-
-    <p class="mt-4 sm:mt-6 text-center text-xs sm:text-sm text-secondary-light">
-      Not a member?
-      <a
-        class="font-medium text-primary hover:text-primary-dark transition-colors duration-300 focus:outline-none focus:underline"
-        href="/register">
-        Sign up now
-      </a>
-    </p>
-  </div>
-</div>
