--- a/frontend/natiart-app/src/app/product/components/customer/dashboard/top-banner/top-banner.component.html
+++ b/frontend/natiart-app/src/app/product/components/customer/dashboard/top-banner/top-banner.component.html
@@ -1,11 +1,13 @@
 <!-- Full-width banner -->
 <div class="relative w-full h-[400px] mb-8">
-  <img *ngFor="let image of bannerImages; let i = index"
-       [alt]="'Banner ' + (i + 1)"
-       [class.opacity-0]="i !== currentBannerIndex"
-       [class.opacity-100]="i === currentBannerIndex"
-       [src]="image"
-       class="absolute top-0 left-0 w-full h-full object-cover transition-opacity duration-500">
+  @for (image of bannerImages; track image; let i = $index) {
+    <img
+      [alt]="'Banner ' + (i + 1)"
+      [class.opacity-0]="i !== currentBannerIndex"
+      [class.opacity-100]="i === currentBannerIndex"
+      [src]="image"
+      class="absolute top-0 left-0 w-full h-full object-cover transition-opacity duration-500">
+  }
   <div class="absolute bottom-0 left-0 right-0 bg-black bg-opacity-50 text-white p-4">
     <div class="container mx-auto">
       <h2 class="text-3xl font-bold">Welcome to Our Porcelain Collection</h2>
@@ -27,6 +29,8 @@
 
   <!-- Navigation Dots -->
   <div class="absolute bottom-4 left-1/2 transform -translate-x-1/2 flex space-x-2">
-    <app-button (click)="goToSlide(i)" *ngFor="let image of bannerImages; let i = index" [class.bg-gray-400]="i !== currentBannerIndex" [class.bg-white]="i === currentBannerIndex" customClass="w-3 h-3 rounded-full transition-colors duration-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400"></app-button>
+    @for (image of bannerImages; track image; let i = $index) {
+      <app-button (click)="goToSlide(i)" [class.bg-gray-400]="i !== currentBannerIndex" [class.bg-white]="i === currentBannerIndex" customClass="w-3 h-3 rounded-full transition-colors duration-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400"></app-button>
+    }
   </div>
 </div>
