--- a/frontend/natiart-app/src/app/product/components/customer/shipping-estimation/shipping-estimation.component.html
+++ b/frontend/natiart-app/src/app/product/components/customer/shipping-estimation/shipping-estimation.component.html
@@ -12,89 +12,98 @@
         id="cep"
         placeholder="00000-000"
         type="text"
-      >
-      <p
-        *ngIf="shippingForm.get('cep')?.invalid && (shippingForm.get('cep')?.dirty || shippingForm.get('cep')?.touched)"
-        class="mt-2 text-sm text-red-600"
-        id="cep-error"
-      >
-        Please enter a valid CEP (8 digits).
-      </p>
+        >
+      @if (shippingForm.get('cep')?.invalid && (shippingForm.get('cep')?.dirty || shippingForm.get('cep')?.touched)) {
+        <p
+          class="mt-2 text-sm text-red-600"
+          id="cep-error"
+          >
+          Please enter a valid CEP (8 digits).
+        </p>
+      }
     </div>
   </form>
 
-  <ng-container *ngIf="shippingState$ | async as state">
-    <div [ngSwitch]="state.status" class="mt-4">
-      <div *ngSwitchCase="'idle'" class="text-gray-600">
-        Enter a CEP above to estimate shipping costs.
-      </div>
-
-      <div *ngSwitchCase="'loading'" aria-live="polite"
-           class="absolute inset-0 bg-gray-500 bg-opacity-75 flex justify-center items-center">
-        <div class="bg-white p-4 rounded-lg shadow-md text-center">
-          <app-loading-spinner></app-loading-spinner>
-          <span class="text-gray-800 font-medium mt-2 block">Estimating shipping...</span>
-        </div>
-      </div>
-
-      <div *ngSwitchCase="'success'" aria-live="polite" class="bg-green-50 border-l-4 border-green-400 p-4">
-        <div class="flex">
-          <div class="flex-shrink-0">
-            <svg aria-hidden="true" class="h-5 w-5 text-green-400" fill="currentColor"
-                 viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-              <path clip-rule="evenodd"
+  @if (shippingState$ | async; as state) {
+    <div class="mt-4">
+      @switch (state.status) {
+        @case ('idle') {
+          <div class="text-gray-600">
+            Enter a CEP above to estimate shipping costs.
+          </div>
+        }
+        @case ('loading') {
+          <div aria-live="polite"
+            class="absolute inset-0 bg-gray-500 bg-opacity-75 flex justify-center items-center">
+            <div class="bg-white p-4 rounded-lg shadow-md text-center">
+              <app-loading-spinner></app-loading-spinner>
+              <span class="text-gray-800 font-medium mt-2 block">Estimating shipping...</span>
+            </div>
+          </div>
+        }
+        @case ('success') {
+          <div aria-live="polite" class="bg-green-50 border-l-4 border-green-400 p-4">
+            <div class="flex">
+              <div class="flex-shrink-0">
+                <svg aria-hidden="true" class="h-5 w-5 text-green-400" fill="currentColor"
+                  viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                  <path clip-rule="evenodd"
                     d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
                     fill-rule="evenodd"/>
-            </svg>
-          </div>
-          <div class="ml-3">
-            <h3 class="text-sm font-medium text-green-800">Cheapest Shipping Option</h3>
-            <div class="mt-2 text-sm text-green-700">
-              <p><strong>Service:</strong> {{ state.cheapestOption?.service }}</p>
-              <p><strong>Price:</strong> R$ {{ state.cheapestOption?.price!.toFixed(2) }}</p>
-              <p><strong>Estimated Delivery:</strong> {{ state.cheapestOption?.estimatedDeliveryDays }} days</p>
+                </svg>
+              </div>
+              <div class="ml-3">
+                <h3 class="text-sm font-medium text-green-800">Cheapest Shipping Option</h3>
+                <div class="mt-2 text-sm text-green-700">
+                  <p><strong>Service:</strong> {{ state.cheapestOption?.service }}</p>
+                  <p><strong>Price:</strong> R$ {{ state.cheapestOption?.price!.toFixed(2) }}</p>
+                  <p><strong>Estimated Delivery:</strong> {{ state.cheapestOption?.estimatedDeliveryDays }} days</p>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
-      </div>
-
-      <div *ngSwitchCase="'no-options'" aria-live="polite" class="bg-yellow-50 border-l-4 border-yellow-400 p-4">
-        <div class="flex">
-          <div class="flex-shrink-0">
-            <svg aria-hidden="true" class="h-5 w-5 text-yellow-400" fill="currentColor"
-                 viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-              <path clip-rule="evenodd"
+        }
+        @case ('no-options') {
+          <div aria-live="polite" class="bg-yellow-50 border-l-4 border-yellow-400 p-4">
+            <div class="flex">
+              <div class="flex-shrink-0">
+                <svg aria-hidden="true" class="h-5 w-5 text-yellow-400" fill="currentColor"
+                  viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                  <path clip-rule="evenodd"
                     d="M8.257 3.099c.765-1.36 2.722-1.36 3.486 0l5.58 9.92c.75 1.334-.213 2.98-1.742 2.98H4.42c-1.53 0-2.493-1.646-1.743-2.98l5.58-9.92zM11 13a1 1 0 11-2 0 1 1 0 012 0zm-1-8a1 1 0 00-1 1v3a1 1 0 002 0V6a1 1 0 00-1-1z"
                     fill-rule="evenodd"/>
-            </svg>
-          </div>
-          <div class="ml-3">
-            <h3 class="text-sm font-medium text-yellow-800">No Shipping Options</h3>
-            <div class="mt-2 text-sm text-yellow-700">
-              <p>No shipping options are available for the provided CEP.</p>
+                </svg>
+              </div>
+              <div class="ml-3">
+                <h3 class="text-sm font-medium text-yellow-800">No Shipping Options</h3>
+                <div class="mt-2 text-sm text-yellow-700">
+                  <p>No shipping options are available for the provided CEP.</p>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
-      </div>
-
-      <div *ngSwitchCase="'error'" aria-live="assertive" class="bg-red-50 border-l-4 border-red-400 p-4">
-        <div class="flex">
-          <div class="flex-shrink-0">
-            <svg aria-hidden="true" class="h-5 w-5 text-red-400" fill="currentColor" viewBox="0 0 20 20"
-                 xmlns="http://www.w3.org/2000/svg">
-              <path clip-rule="evenodd"
+        }
+        @case ('error') {
+          <div aria-live="assertive" class="bg-red-50 border-l-4 border-red-400 p-4">
+            <div class="flex">
+              <div class="flex-shrink-0">
+                <svg aria-hidden="true" class="h-5 w-5 text-red-400" fill="currentColor" viewBox="0 0 20 20"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <path clip-rule="evenodd"
                     d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z"
                     fill-rule="evenodd"/>
-            </svg>
-          </div>
-          <div class="ml-3">
-            <h3 class="text-sm font-medium text-red-800">Error</h3>
-            <div class="mt-2 text-sm text-red-700">
-              <p>{{ state.error }}</p>
+                </svg>
+              </div>
+              <div class="ml-3">
+                <h3 class="text-sm font-medium text-red-800">Error</h3>
+                <div class="mt-2 text-sm text-red-700">
+                  <p>{{ state.error }}</p>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
-      </div>
+        }
+      }
     </div>
-  </ng-container>
+  }
 </section>
