--- a/frontend/natiart-app/src/app/shared/components/alert-message/alert-message.component.html
+++ b/frontend/natiart-app/src/app/shared/components/alert-message/alert-message.component.html
@@ -1,11 +1,13 @@
 <div class="fixed top-4 right-4 z-50 flex flex-col space-y-3">
-  <div *ngFor="let alert of alertMessages"
-       [@alertAnimation]
+  @for (alert of alertMessages; track alert) {
+    <div
+      [@alertAnimation]
        [ngClass]="{
          'bg-green-100 border-green-400 text-green-700': alert.type === 'success',
          'bg-red-100 border-red-400 text-red-700': alert.type === 'error'
        }"
-       class="border-l-4 p-4 shadow-lg rounded-lg hover:shadow-xl transition-shadow">
-    <p class="font-medium">{{ alert.message }}</p>
-  </div>
+      class="border-l-4 p-4 shadow-lg rounded-lg hover:shadow-xl transition-shadow">
+      <p class="font-medium">{{ alert.message }}</p>
+    </div>
+  }
 </div>
