--- a/frontend/natiart-app/src/app/shared/components/shared/header/header.component.html
+++ b/frontend/natiart-app/src/app/shared/components/shared/header/header.component.html
@@ -9,12 +9,12 @@
     </nav>
     <div class="flex items-center space-x-4">
       <svg class="w-5 h-5 text-secondary hover:text-primary cursor-pointer" fill="none"
-           stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+        stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
         <path d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" stroke-linecap="round" stroke-linejoin="round"
-              stroke-width="2"/>
+          stroke-width="2"/>
       </svg>
       <svg class="w-5 h-5 text-secondary hover:text-primary cursor-pointer" fill="none"
-           stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+        stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
         <path
           d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
           stroke-linecap="round" stroke-linejoin="round"
@@ -22,17 +22,19 @@
       </svg>
       <app-button (click)="toggleMobileMenu()" color="link" size="sm" customClass="md:hidden">
         <svg class="w-5 h-5 text-secondary hover:text-primary" fill="none" stroke="currentColor"
-             viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+          viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
           <path d="M4 6h16M4 12h16M4 18h16" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
         </svg>
       </app-button>
     </div>
   </div>
   <!-- Mobile Menu -->
-  <div *ngIf="isMobileMenuOpen" class="md:hidden bg-white px-4 py-2">
-    <a class="block py-2 hover:text-primary transition-colors" href="#">Home</a>
-    <a class="block py-2 hover:text-primary transition-colors" href="#">Collections</a>
-    <a class="block py-2 hover:text-primary transition-colors" href="#">About</a>
-    <a class="block py-2 hover:text-primary transition-colors" href="#">Contact</a>
-  </div>
+  @if (isMobileMenuOpen) {
+    <div class="md:hidden bg-white px-4 py-2">
+      <a class="block py-2 hover:text-primary transition-colors" href="#">Home</a>
+      <a class="block py-2 hover:text-primary transition-colors" href="#">Collections</a>
+      <a class="block py-2 hover:text-primary transition-colors" href="#">About</a>
+      <a class="block py-2 hover:text-primary transition-colors" href="#">Contact</a>
+    </div>
+  }
 </header>
